# llvm17

./: Calc.cpp  Parser.cpp  Parser.h  Sema.h
l2/: CMakeLists.txt
l2/src/: AST.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  Lexer.cpp  Lexer.h  Sema.cpp  readme.md  rtcalc.c
l3-tinylang/: README.md
l3-tinylang/include/tinylang/Basic/: Diagnotics.def  Diagnotics.h  TokenKinds.h
l3-tinylang/include/tinylang/Lexer/: Lexer.h
l3-tinylang/lib/Basic/: TokenKinds.cpp
l3-tinylang/lib/Lexer/: Lexer.cpp
